# wouldrun

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  test_branches.py  test_crash.py  test_glob2.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  mirror.yml
examples/example-repo/.github/workflows/: ci.yml  docs.yml  release.yml  reusable-deploy.yml
tests/: _helpers.py  test_cli.py  test_discover.py  test_evaluate.py  test_gitdiff.py  test_globmatch.py  test_pr_format.py  test_workflow.py  test_yamlmini.py
wouldrun/: __init__.py  cli.py  discover.py  evaluate.py  event.py  gitdiff.py  globmatch.py  pr_format.py  report.py  workflow.py  yamlmini.py
