[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wouldrun"
version = "0.1.0"
description = "Work out which GitHub Actions workflows and jobs a change would trigger, without pushing or running act."
readme = "README.md"
license = { text = "Prosperity Public License 3.0.0" }
requires-python = ">=3.9"
authors = [{ name = "Cole Munz" }]
dependencies = []
keywords = ["github-actions", "ci", "workflow", "static-analysis", "paths-filter",
            "workflow-call", "reusable-workflows", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/munzzyy/wouldrun"
Issues = "https://github.com/munzzyy/wouldrun/issues"

[project.scripts]
wouldrun = "wouldrun.cli:main"

[tool.setuptools.packages.find]
include = ["wouldrun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
